--- a/src/main/resources/resources/vat-group-module.properties
+++ b/src/main/resources/resources/vat-group-module.properties
@@ -21,3 +21,8 @@ vatmix_technical_data.mounting_position=Mounting Position
 
 vatnt_productList=Products List
 vatnt_productList.filter=Valve Type
+
+vatnt_heroBanner=Hero Banner (Header)
+vatnt_heroBanner.backgroundImage=Background Image
+vatnt_heroBanner.image=Image
+vatnt_heroBanner.jcr_title=Title
