updated to multiple selection for properties

--- a/src/main/resources/resources/vat-group-module.properties
+++ b/src/main/resources/resources/vat-group-module.properties
@@ -26,3 +26,10 @@ vatnt_heroBanner=Hero Banner (Header)
 vatnt_heroBanner.backgroundImage=Background Image
 vatnt_heroBanner.image=Image
 vatnt_heroBanner.jcr_title=Title
+
+vatmix_withImage=Attach an Image to the Page (Category Page)
+vatmix_pageDesc=Main description of the Page (Header Category Page)
+vatmix_pageDesc.pageDesc=Page description
+
+vatnt_menuBlockCategory=Category Block Menu
+vatnt_entetePageRubrique=Category Page header
